--- a/src/index.html
+++ b/src/index.html
@@ -5,28 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>INSITE 2020: What's Your Number?</title>
-    <meta name="Description" content="A simple webpack starter project for your basic web development needs." />
+    <meta name="description" content="Visualization for the What's Your Number project by Ellie Balk" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
   </head>
 
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand" href="#">
+        <h1>
+          <img src="<%= require('./assets/icon.png') %>" width="24" height="24" alt="What's Your Number? INSITE 2020" />
+          <span class="logo-text">What's Your Number?</span>
+        </h1>
+      </a>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-        </ul>
+        <!-- <ul class="navbar-nav"> -->
+        <!-- <li class="nav-item"> -->
+        <!-- <a class="nav-link" href="#">Link</a> -->
+        <!-- </li> -->
+        <!-- <li class="nav-item"> -->
+        <!-- <a class="nav-link" href="#">Link</a> -->
+        <!-- </li> -->
+        <!-- <li class="nav-item"> -->
+        <!-- <a class="nav-link" href="#">Link</a> -->
+        <!-- </li> -->
+        <!-- </ul> -->
       </div>
     </nav>
 
