--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>INSITE 2020: What's Your Number?</title>
+    <link rel="icon" href="<%= require('./assets/icon.png') %>">
     <meta name="description" content="Visualization for the What's Your Number project by Ellie Balk" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
   </head>
