--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,16 @@
         <!-- </li> -->
         <!-- </ul> -->
       </div>
+      <div class="navbar-collapse collapse w-100 order-3">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item" id="reload" style="padding-right: 8px;">
+            <button class="btn btn-primary" href="#">Reload Data</button>
+          </li>
+          <li class="nav-item">
+            <button class="btn btn-primary" id="download" href="#">Download SVG</button>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <div class="container" style="margin-top:30px">
