--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <div class="container" style="margin-top:30px">
       <div class="row">
         <div class="col">
-          <div id="visualization-target">
+          <div id="visualization-target" class="visualization">
 
           </div>
         </div>
