--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,21 @@
           </div>
         </div>
       </div>
+      <!-- <div class="row viz-form"> -->
+      <!-- <div class="col"> -->
+      <!-- <form class="form-inline"> -->
+      <!-- <label class="my-1 mr-2" for="xscale">X Scale</label> -->
+      <!-- <select class="my-1 mr-sm-2" id="xscale"> -->
+      <!-- <option value="linear">Linear</option> -->
+      <!-- <option value="symlog">Symmetric Log</option> -->
+      <!-- </select> -->
+      <!-- <label class="my-1 mr-2" for="log-constant">Constant</label> -->
+      <!-- <div class="mb-2 mr-sm-2"> -->
+      <!-- <input type="number" class="form-control" id="log-constant" value="0.1"> -->
+      <!-- </div> -->
+      <!-- </form> -->
+      <!-- </div> -->
+      <!-- </div> -->
     </div>
   </body>
 
